--- a/LogAdventure/src/main/resources/application.properties
+++ b/LogAdventure/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/logthingsdb?useSSL=false&&useL
 spring.datasource.username=log
 spring.datasource.password=log
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jmx.default-domain=LogAdventure
